welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:54: error: ':' expected but ')' found.
	def faireV(c){
                    ^MethodsPicture:66: error: identifier expected but '}' found.
}
^